--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.11",
-    "@nestjs/websockets": "^11.1.11",
+    "@nestjs/swagger": "^11.2.6",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
